--- a/doc/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
@@ -651,3 +651,13 @@ viene utilizzata da \texttt{RequestHandlerController} per creare l'archivio comp
 questa classe si occupa di ricevere le richieste REST provenienti dal client.
 \end{itemize}
 \end{itemize}
+
+\begin{adjustwidth}{-3cm}{-3cm}
+
+\begin{figure}[H]
+	\makebox[\textwidth][c]{
+	\includegraphics[width=0.9\textwidth]{img/server_pkg2}}
+	\caption{Diagramma package server}
+\end{figure}
+
+\end{adjustwidth}
