--- a/doc/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
@@ -580,3 +580,12 @@ questa classe si occupa di gestire l'intera view dell'applicazione, componendo l
 questa classe ci permette di aggiungere della logica alla collezione di tutti i diagrammi che possediamo.
 \end{itemize}
 \end{itemize}
+
+\begin{adjustwidth}{-3cm}{-3cm}
+
+\begin{figure}[H]
+	\makebox[\textwidth][c]{
+	\includegraphics[width=1\textwidth]{img/client_hor}}
+	\caption{Diagramma package client}
+\end{figure}
+\end{adjustwidth}
