--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
@@ -77,7 +77,7 @@
 \section{Architettura di Backbone.js}
 \input{tex/appbackbone}
 
-\section{Pattern creazionali} \label{sec:app_creaz}
+\section{Design pattern} \label{sec:app_creaz}
 \input{tex/pattern}
 
 \end{document}
