--- a/doc/Esterni/Specifica_tecnica/diario.tex
+++ b/doc/Esterni/Specifica_tecnica/diario.tex
@@ -4,7 +4,7 @@
 \begin{diario}
 	1.0.0 & {\GG} (Responsabile) & 27/02/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 27/02/2017 & Verifica documento \\ \hline
-	0.0.16 & {\PB} (Progettista) & 24/02/2017 & Stesura Appendice sezione JointJS,Architetura Backbone e Pattern\\ \hline
+	0.0.16 & {\PB} (Progettista) & 24/02/2017 & Stesura Appendici JointJS, Architetura Backbone e Design Pattern\\ \hline
 	0.0.15 & {\PB} (Progettista) & 23/02/2017 & Stesura sezione Tracciamento, Tracciamento Classi-Requisiti e Tracciamento Requisiti-Classe\\ \hline
 	0.0.14 & {\GG} (Progettista) & 22/02/2017 & Stesura SWEDesigner::Server::Stereotype, SWEDesigner::Server::Template, SWEDesigner::Server::Template::Template, SWEDesigner::Server::Template::TemplateAssembler, SWEDesigner::Server::Template::Java, SWEDesigner::Server::Template::JavaTemplate, SWEDesigner::Server::Utility e SWEDesigner::Server::Utility::Compressor \\ \hline
 	0.0.13 & {\AZ} (Progettista) & 20/02/2017 & Stesura SWEDesigner::Server::Project::ParsedFor, SWEDesigner::Server::Project::ParsedIf, SWEDesigner::Server::Project::ParsedWhile, SWEDesigner::Server::Project::ParsedInitialize, SWEDesigner::Server::Project::ParsedReturn, SWEDesigner::Server::Project::ParsedMethod, SWEDesigner::Server::Project::ParsedInstruction, SWEDesigner::Server::Project::ParsedInterface, SWEDesigner::Server::Project::ParsedProgram e SWEDesigner::Server::Project::ParsedType \\ \hline
