--- a/doc/Esterni/Specifica_tecnica/tex/pattern.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/pattern.tex
@@ -56,7 +56,7 @@
 \subsection{Factory}
 
 \begin{figure}[H] \label{fig:factory}
-	\includegraphics[scale=0.34]{img/factory.png}
+	\includegraphics[scale=0.34]{img/factory2.png}
 	\caption{Factory.}
 \end{figure}
 
@@ -65,7 +65,6 @@
 \subsubsection{Struttura} Sono coinvolti i seguenti componenti:
 \begin{enumerate}
 	\item Creator: dichiara la Factory che avrà il compito di ritornare l'oggetto appropriato;
-	\item ConcreteCreator: effettua l'overwrite del metodo della Factoryal fine di ritornare l'implentazione dell'oggetto;
 	\item Product: definisce l'interfaccia dell'oggetto che deve essere creato dalla Factory;
 	\item ConcreteProduct: implementa l'oggetto in base ai metodi  definiti dall'interfaccia Product.
 \end{enumerate}
