--- a/doc/Esterni/Specifica_tecnica/tex/pattern.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/pattern.tex
@@ -64,9 +64,9 @@
 
 \subsubsection{Struttura} Sono coinvolti i seguenti componenti:
 \begin{enumerate}
-	\item Creator (VeichleFactory): dichiara la Factory che avrà il compito di ritornare l'oggetto appropriato;
-	\item Product (Vehicle): definisce l'interfaccia dell'oggetto che deve essere creato dalla Factory;
-	\item ConcreteProduct (Truck,Car): implementa l'oggetto in base ai metodi  definiti dall'interfaccia Product.
+	\item Creator (\texttt{VehicleFactory}): dichiara la Factory che avrà il compito di ritornare l'oggetto appropriato;
+	\item Product (\texttt{Vehicle}): definisce l'interfaccia dell'oggetto che deve essere creato dalla Factory;
+	\item ConcreteProduct (\texttt{Truck}, \texttt{Car}): implementa l'oggetto in base ai metodi  definiti dall'interfaccia Product.
 \end{enumerate}
 
 \subsubsection{Applicabilità} È possibile applicare il pattern quando:
