--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -7,6 +7,7 @@
 \subsection{Client} \label{sec:tech_client}
 Il \gloss{client} di \proj{} sarà implementato con le tecnologie web richieste dal capitolato d'appalto: HTML5, CSS3 e JavaScript. Di seguito sono elencate e descritte le librerie JavaScript di cui il client necessita. Tutte le librerie sono open-source, come richiesto dal capitolato.
 
+
 \subsubsection{JointJS}
 La libreria \jointjs{} (\url{www.jointjs.com/opensource}) è una libreria open-source per realizzare editor di diagrammi interattivi, in maniera altamente personalizzabile.
 
@@ -30,11 +31,48 @@ La libreria \backbonejs{} permette di strutturare applicazioni web single page (
 
 A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC, al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà il lato client di \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello MVC offerto da \backbonejs.
 
+Tra i pro di \backbone{}:
+\begin{itemize}
+	\item permette una facile implementazione lato client del pattern architetturale MVC;
+	\item semplice, flessibile e con un gran numero di plug-in ed estensioni disponibili;
+	\item fornisce un modello di ereditarietà semplice, ma allo stesso tempo potente basato su metodo emph{extend}.
+\end{itemize}
+
+Tra i contro di \backbone{}:
+\begin{itemize}
+	\item fare test di unità sulle Views di \backbone{} può essere molto complicato e richiedere una gran quantità di codice di mock;
+	\item creazione di tag div ridondanti nel codice HTML generato;
+	\item difficoltà nel comunicare con un back-end non RESTful;
+	\item mancanza di una netta separazione tra View e Controller nell'interpretazione del pattern MVC che esso propone.
+\end{itemize}
+
 \subsubsection{\jquery}
-La libreria \jquery{} è sfruttata da \jointjs{} ed è necesaria per semplificare varie operazioni di basso livello.
+La libreria \jquery{} è sfruttata da \jointjs{} ed è necessaria per semplificare varie operazioni di basso livello.
+
+I vantaggi più rilevanti sono:
+\begin{itemize}
+	\item il grande supporto da parte della community;
+	\item permette di malipolare gli elementi del DOM facilmente;
+	\item agevola la realizzazione di animazioni elementari;
+	\item presenta un gran numero di plug-in.
+\end{itemize}
+
+Tra i contro dell'utilizzo di \jquery{}:
+\begin{itemize}
+	\item lentezza nelle prestazioni in caso di complesse manipolazioni del DOM e manipolazioni;
+	\item un uso scorretto può portare alla creazione di grandi moli di codice difficile da mantenere;
+\end{itemize} 
 
 \subsubsection{\requirejs}
 La libreria \requirejs{} è un loader di moduli e file \js{}. Esso si occuperà principalmente di risolvere dipendenze delle librerie \js{} utilizzate.
+
+I vantaggi principali:
+\begin{itemize}
+	\item esplicita le dipendenze tra i diversi moduli;
+	\item caricamento dei moduli asincrono e "su richiesta".
+\end{itemize}
+
+Lo svantaggio principale risiede nella necessità di uno studio approfondito e ragionato prima di un utilizzo efficace.
 
 \subsubsection{\lodash}
 La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Rispetto alla simile libreria \emph{Underscore}, questa fornisce più performance, più features e miglior documentazione. Essa inoltre è usata da \jointjs.
@@ -50,11 +88,31 @@ La libreria \lodash{} fornisce metodi di utilità non offerti da \js{} puro. Ris
 \subsubsection{Apache Tomcat}
 Il \emph{back end} della nostra applicazione è ospitato su un \gloss{server} Apache Tomcat, come richiesto dal capitolato d'appalto nel caso il \emph{back end} fosse scritto in Java.
 
+Tomcat fornisce numerosi vantaggi:
+\begin{itemize}
+	\item facile da installare;
+	\item richiede poche impostazione personalizzate per poter esssere pienamente operativo;
+	\item consumo di memoria molto basso rispetto alle applicazioni concorrenti;
+	\item tempo di avvio immediato. 
+\end{itemize}
+
+Allo stesso tempo manca della funzionalità che permette il recupero automatico delle funzionalita in caso di \emph{failure}.
+
 \subsubsection{Spring}
 Le richieste HTTP inviate dal client al server vengono gestite tramite la libreria open-source \emph{Spring} (disponibile all'indirizzo \url{spring.io}), utile per aderire ai princìpi dello stile architetturale REST.
 
+La scelta di Spring è stata guidata dalle seguenti caratteristiche proprie di questa libreria:
+\begin{itemize}
+	\item modulare: rende possibile integrare solo alcuni moduli all'interno del progetto;
+	\item leggero: diminuisce le dipendenze o le isola;
+	\item integrabile: rende facile l'utilizzazione di altri framework oper source;
+	\item portabile: permette di scrivere software facile da testare.
+\end{itemize}
+
 \subsubsection{StringTemplate}
-StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Come indicato sul sito ufficiale, questa libreria è particolarmente adatta alla genereazione di codice. Il server della nostra applicazione la utilizza per:
+StringTemplate è una libreria open-source scritta da Terence Parr e disponibile all'indirizzo \url{stringtemplate.org}. Come indicato sul sito ufficiale, questa libreria è particolarmente adatta alla genereazione di codice. 
+
+Essa viene utilizzata per:
 \begin{enumerate}
 	\item creare dei template di codice Java, inframmezzati da speciali marcatori definiti da StringTemplate;
 	\item popolare tali template con i dati ricevuti dal client.
@@ -63,3 +121,9 @@ I marcatori definiti dalla libreria servono da segnaposto per ospitare i dati ot
 
 \subsubsection{Google Gson}
 Google Gson è una libreria open-source disponibile all'indirizzo \url{github.com/google/gson}. Essa permette di convertire un oggetto JSON in un oggetto Java che abbia, come campi dati, un sovrainsieme delle chiavi presenti nell'oggetto JSON; l'oggetto JSON dev'essere contenuto in una stringa Java. I valori delle chiavi dell'oggetto JSON diventano i valori dei campi dati dell'oggetto Java. La libreria permette anche il procedimento inverso (da Java a JSON), che però non usiamo nella nostra applicazione.
+
+Tra gli aspetti più rilevanti di Google Gson spiccano:
+\begin{itemize}
+	\item la semplicita e la velocità di utilizzo;
+	\item l'indipendenza dai file sorgenti al contrario delle librerie. simili;
+\end{itemize}
