resa compilabile SV

--- a/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
+++ b/doc/Esterni/Specifica_tecnica/tex/tecnologie.tex
@@ -31,16 +31,16 @@ La libreria \backbonejs{} permette di strutturare applicazioni web single page (
 
 A causa della struttura data alla libreria \jointjs{}, sviluppata tramite MVC, al fine di ridurre il numero di librerie necessarie allo sviluppo del progetto, si costruirà il lato client di \proj{} estendendo le funzionalità di base offerte da \jointjs{} usando il modello MVC offerto da \backbonejs.
 
-Tra i pro di \backbone{}:
+Tra i pro di \backbonejs{}:
 \begin{itemize}
 	\item permette una facile implementazione lato client del pattern architetturale MVC;
 	\item semplice, flessibile e con un gran numero di plug-in ed estensioni disponibili;
 	\item fornisce un modello di ereditarietà semplice, ma allo stesso tempo potente basato su metodo emph{extend}.
 \end{itemize}
 
-Tra i contro di \backbone{}:
+Tra i contro di \backbonejs{}:
 \begin{itemize}
-	\item fare test di unità sulle Views di \backbone{} può essere molto complicato e richiedere una gran quantità di codice di mock;
+	\item fare test di unità sulle Views di \backbonejs{} può essere molto complicato e richiedere una gran quantità di codice di mock;
 	\item creazione di tag div ridondanti nel codice HTML generato;
 	\item difficoltà nel comunicare con un back-end non RESTful;
 	\item mancanza di una netta separazione tra View e Controller nell'interpretazione del pattern MVC che esso propone.
