--- a/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
+++ b/doc/Esterni/Specifica_tecnica/Specifica_tecnica_1_0_0.tex
@@ -18,12 +18,12 @@
 \newcommand{\textt}[1]{\texttt{#1}}
 
 % Elenco dei design pattern utilizzati in un documento:
-\newcommand{\listpatternname}{Elenco dei \emph{design pattern}}
-\newlistof{pattern}{pat}{\listpatternname}
-\newcommand{\pattern}[1]{%
-\refstepcounter{pattern}
-\emph{#1}
-\addcontentsline{pat}{pattern}{\protect\numberline{\thepattern}#1}}
+% \newcommand{\listpatternname}{Elenco dei \emph{design pattern}}
+% \newlistof{pattern}{pat}{\listpatternname}
+% \newcommand{\pattern}[1]{%
+% \refstepcounter{pattern}
+% \emph{#1}
+% \addcontentsline{pat}{pattern}{\protect\numberline{\thepattern}#1}}
 
 \begin{document}
 \maketitle
