breve correzione pdp

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -59,7 +59,7 @@ Il documento è suddiviso nelle seguenti sezioni:
 \begin{itemize}
 	\item \NdP;
 	\item Capitolato d'appalto C6, \proj: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf}, visitato il 08/02/2017;
-	\item Regolamento del progetto didattico \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
+	\item Regolamento del progetto didattico: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf}, visitato il 08/02/2017;
 	\item Vincoli di organigramma e dettagli tecnico-economici: \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}, visitato il 08/02/2017.
 \end{itemize}
 \subsubsection{Riferimenti informativi} \label{sec:ref}
@@ -89,7 +89,7 @@ Il gruppo \hx{} ha deciso di rispettare le seguenti scadenze:
 
 La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa, infatti, si deriva tutta la struttura principale con cui saranno pianificati \gloss{milestone} e task.
 
-Il progetto \proj, come affrontato nei documenti \SdF{} e \PdQ, presenta numerosi punti critici, analizzati nella sezione \ref{sec:rischi} (in particolare nella sezione \ref{sec:tec}, in cui sono analizzati i rischi tecnologici). \proj{} richiede un'intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software CASE (Computer Aided Software Engineering) e alla loro realizzazione, tenendo conto del quantitativo di risorse assegnate al progetto. % riferimento a verbale di riunione con zucchetti?
+Il progetto \proj, come affrontato nei documenti \SdF{} e \PdQ, presenta numerosi punti critici, analizzati nella sezione \ref{sec:rischi}. \proj{} richiede un'intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software CASE (Computer Aided Software Engineering) e alla loro realizzazione, tenendo conto del quantitativo di risorse assegnate al progetto. % riferimento a verbale di riunione con zucchetti?
 
 Un progetto dedito all'esplorazione va supportato con un adeguato modello di sviluppo; esso deve avere i seguenti requisiti:
 \begin{itemize}
@@ -1581,16 +1581,10 @@ Le ore dedicate al task \emph{Incremento Piano di Qualifica [RP]} sono variate, 
 \subsubsection{Considerazioni}
 A fronte delle necessarie correzioni al \PdQ{} non previste è stato necessario rivedere la pianificazione, sottraendo risorse alla progettazione e assegnandole alla verifica. Questo ha portato ad una variazione totale delle ore/persona del gruppo ma è sempre stato rispettato il vincolo delle 105 ore rendicontabili. 
 
+\subsubsection{Preventivo a finire}
 Il consuntivo presenta una differenza di costo negativa a causa del costo diverso delle due diverse mansioni. Queste risorse risparmiate in questa fase saranno investite successivamente qualora necessario al fine di migliorare ulteriormente le attività di verifica, prevedendo l'assegnazione di più ore alla attività di verifica. L'effettiva variazione delle ore assegnate sarà presentata nei prossimi consuntivi di periodo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\subsubsection{Preventivo a finire}
-
-% SAREBBE DA FARE MA OH
-
-
-
 
 
 %%%%%%%%%%%%%%%%
