--- a/Interni/Verbali/VI_16-11-29.tex
+++ b/Interni/Verbali/VI_16-11-29.tex
@@ -26,13 +26,14 @@
 \end{description}
 
 Durante la riunione sono state prese le seguenti decisioni:
-\begin{itemize}
-\item il nome e il logo del gruppo e dopo varie proposte abbiamo scelto all'unanimità il nome \emph{Hivex}, dall'inglese \emph{hive} (la casetta delle api), dato che il nostro gruppo si compone di sei persone --- tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \emph{Novum Organum},
-\begin{quote}
-	The men of experiment are like the ant, they only collect and use; the reasoners resemble spiders, who make cobwebs out of their own substance. But the bee takes the middle course, it gathers its material from the flowers of the garden and field, but transforms and digests it by a power of its own.
-\end{quote}
-
-\item scelto il capitolato C6 \proj{} proposto dall'azienda \ZU{} e si è discusso su come distribuire i ruoli ai vari componenti del gruppo;
-\item scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack}; si è reso necessario integrare questo strumento con \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite il \gloss{diagramma di Gantt} tutti i task inseriti in Asana. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle funzionalità offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare Slack: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di Asana. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perché offre un ottimo servizio gratuitamente.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{nome e logo} --- Dopo varie proposte abbiamo scelto all'unanimità il nome \emph{Hivex}, dall'inglese \emph{hive} (la casetta delle api), dato che il nostro gruppo si compone di sei persone --- tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \emph{Novum Organum},
+	\begin{quote}
+		The men of experiment are like the ant, they only collect and use; the reasoners resemble spiders, who make cobwebs out of their own substance. But the bee takes the middle course, it gathers its material from the flowers of the garden and field, but transforms and digests it by a power of its own.
+	\end{quote}
+	Abbiamo poi delegato a \LB{} la creazione del logo.
+	\item \textbf{capitolato} --- Abbiamo scelto il capitolato C6 \proj{} proposto dall'azienda \ZU{}, per i motivi esposti in \SdF. 
+	\item \textbf{ruoli} --- Abbiamo discusso su come distribuire i ruoli ai vari componenti del gruppo. Ogni membro ha scelto i ruoli da rivestire inizialmente, per cominciare al meglio il progetto; il responsabile di progetto dovrà poi decidere i cambi di ruolo e documentarli nel Piano di Progetto.
+	\item \textbf{strumenti} --- Abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack}; si è reso necessario integrare questo strumento con \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite il \gloss{diagramma di Gantt} tutti i task inseriti in Asana. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle funzionalità offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare Slack: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di Asana. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perché offre un ottimo servizio gratuitamente.
+\end{enumerate}
 \end{document}
