--- a/Interni/Verbali/VI_16-12-12.tex
+++ b/Interni/Verbali/VI_16-12-12.tex
@@ -26,10 +26,10 @@
 \end{description}
 
 Decisioni prese:
-\begin{itemize}
-\item discusso degli strumenti da utilizzare nel corso del progetto e alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Perciò, per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere una maggiore automazione e modularità;
-\item per la gestione automatizzata dei requisiti, ci è venuta in aiuto un'interfaccia open-source \gloss{PHP}/\gloss{MySQL} chiamata “\gloss{PragmaDB}”, ideata da alcuni nostri predecessori;
-\item analizzato alcuni software per il controllo del codice e dei documenti quali Sonarqube e \gloss{Travis} che si integra bene con Github, e altre tecnologie circa Java, JavaScript, javaDoc ed infine IntelliJIDEA;
-\item scelto le domande da proporre circa la definizione dei requisiti del progetto. In particolare, abbiamo pensato di porre alcune domande basilari come la scelta del linguaggio da generare (Java o JavaScript) e la scelta della lingua per la documentazione del software(italiano o inglese); inoltre, abbiamoformalizzato i dubbi sorti sulla natura stessa di questo progetto così particolare.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{strumenti} --- Abbiamo discusso degli strumenti da utilizzare nel corso del progetto. Alcuni criteri di scelta sono stati: che gli strumenti fossero “standard”; che non fossero eccessivamente complicati da utilizzare né da imparare; che si integrassero il più possibile tra di loro. Perciò, per generare la documentazione abbiamo adottato \gloss{Latex}, al fine di ottenere un buon grado di automazione e di modularità.
+	\item \textbf{\gloss{PragmaDB}} --- Per la gestione automatizzata dei requisiti, abbiamo scelto di adottare un'\gloss{applicazione web} open-source chiamata “PragmaDB”, ideata da alcuni nostri predecessori; il nostro gruppo ha scelto quest'applicazione per aumentare ancora il grado di automazione dei processi di analisi dei requisiti e progettazione.
+	\item Abbiamo analizzato alcuni software per il controllo del codice e dei documenti, quali Sonarqube e \gloss{Travis} che si integra bene con \gloss{GitHub}, e altre tecnologie circa \gloss{Java}, \gloss{JavaScript}, javaDoc ed infine IntelliJ IDEA.
+	\item Abbiamo scelto le domande da porre al \GP circa la definizione dei requisiti del progetto. In particolare, abbiamo pensato di porre alcune domande basilari come la scelta del linguaggio da generare (Java o JavaScript) e la scelta della lingua per la documentazione del software (italiano o inglese); inoltre, abbiamo formalizzato i dubbi sorti sulla natura stessa di questo progetto così particolare.
+\end{enumerate}
 \end{document}
