migliorati verbali interni

--- a/Interni/Verbali/VI_16-12-20.tex
+++ b/Interni/Verbali/VI_16-12-20.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 20 dicembre 2016}
 % \date{9 gennaio 2017}
 
@@ -26,8 +26,9 @@
 \end{description}
 
 Decisioni prese:
-\begin{itemize}
-	\item Abbiamo scelto di realizzare un'\gloss{applicazione web} con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} (dal lato \gloss{client}) che genera codice \gloss{Java}; dopo varie proposte, il dominio applicativo del software da realizzare è risultato “giochi da tavolo”.
-	\item Abbiamo analizzato i casi d'uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{tecnologie e dominio applicativo} --- Abbiamo scelto di realizzare un'\gloss{applicazione web} con \gloss{HTML5}, \gloss{CSS3} e \gloss{JavaScript} (dal lato \gloss{client}) che genera codice \gloss{Java}. Dopo varie proposte, il dominio applicativo del software da realizzare è risultato “giochi da tavolo”, per interesse personale dei membri del gruppo.
+	\item \textbf{analisi dei requisiti} --- Abbiamo analizzato i casi d'uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
+\end{enumerate}
+
 \end{document}
