--- a/Interni/Verbali/VI_16-12-23.tex
+++ b/Interni/Verbali/VI_16-12-23.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 23 dicembre 2016}
 % \date{9 gennaio 2017}
 
@@ -20,11 +20,14 @@
 	\item[Orario] 15:00 - 18:00;
 	\item[Durata] 3 ore;
 	\item[Luogo incontro] 2AB45 di Torre Archimede; 
-	\item[Oggetto] discussione dei casi d'uso;
+	\item[Oggetto] discussione dei \gloss{casi d'uso};
 	\item[Segretario] \PB; 
 	\item[Partecipanti] \ALL.
 \end{description}
 
-Durante la riunione sono stati analizzati i casi d'uso, in particolar modo riguardo la parte del \gloss{diagramma delle attività}.
+Decisioni prese:
+\begin{enumerate}
+	\item \textbf{analisi dei requisiti} --- Abbiamo analizzato i casi d'uso, in particolar modo riguardo la parte del \gloss{diagramma delle attività}.
+\end{enumerate}
 
 \end{document}
