--- a/Interni/Verbali/VI_17-01-02.tex
+++ b/Interni/Verbali/VI_17-01-02.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 2 gennaio 2017}
 % \date{9 gennaio 2017}
 
@@ -24,10 +24,12 @@
 	\item[Segretario] \PB; 
 	\item[Partecipanti] \ALL.
 \end{description}
+
 Decisioni prese:
-\begin{itemize}
-\item esposti i progressi sulla documentazione da tutti i membri del gruppo;
-\item deciso di utilizzare Java come linguaggio di programmazione per il lato server dell'applicativo da realizzare;
-\item analizzato tutti i requisiti da inserire nell'\AdR{} e le modifiche da apportare alla parte \gloss{PHP} di PragmaDB sull'esportazione del glossario in \gloss{Latex}.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{documentazione} --- Ogni membro ha esposto i progressi sui documenti di cui è redattore.
+	\item \textbf{tecnologie \emph{back end}} --- Abbiamo deciso di utilizzare \gloss{Java} come linguaggio di programmazione per il \emph{back end} dell'applicazione da realizzare.
+	\item \textbf{analisi dei requisiti} --- Abbiamo analizzato tutti i requisiti da inserire nell'Analisi dei Requisiti e le modifiche da apportare alla parte \gloss{PHP} di PragmaDB sull'esportazione del glossario in \gloss{Latex}.
+\end{enumerate}
+
 \end{document}
