--- a/Interni/Verbali/VI_17-02-15.tex
+++ b/Interni/Verbali/VI_17-02-15.tex
@@ -8,7 +8,7 @@
 \author{\LS}
 \supervisor{\LB}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 15 febbraio 2017}
 % \date{9 gennaio 2017}
 
@@ -20,9 +20,14 @@
 	\item[Orario] 09:30 - 13:30;
 	\item[Durata] 4 ore;
 	\item[Luogo incontro] Abitazione \GG;
-	\item[Oggetto] analisi struttura \gloss{server} di \proj{};
+	\item[Oggetto] analisi architettura \emph{back end} di \proj;
 	\item[Segretario] \LS; 
 	\item[Partecipanti] \ALL.
 \end{description}
-Durante la riunione sono stati analizzati gli aspetti principali dell'architettura lato server di \proj{}, in particolar modo sono state scelte i \gloss{package} e le classi da utilizzare.
+
+Decisioni prese:
+\begin{enumerate}
+	\item \textbf{progettazione \emph{back end}} --- Abbiamo analizzato gli aspetti principali dell'architettura del \emph{back end} di \proj; in particolar modo, abbiamo delineato i \gloss{package} e le classi da utilizzare.
+\end{enumerate}
+
 \end{document}
