--- a/Interni/Verbali/VI_16-11-29.tex
+++ b/Interni/Verbali/VI_16-11-29.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 29 novembre 2016}
 % \date{9 gennaio 2017}
 
@@ -36,4 +36,5 @@ Durante la riunione sono state prese le seguenti decisioni:
 	\item \textbf{ruoli} --- Abbiamo discusso su come distribuire i ruoli ai vari componenti del gruppo. Ogni membro ha scelto i ruoli da rivestire inizialmente, per cominciare al meglio il progetto; il responsabile di progetto dovrà poi decidere i cambi di ruolo e documentarli nel Piano di Progetto.
 	\item \textbf{strumenti} --- Abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack}; si è reso necessario integrare questo strumento con \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite il \gloss{diagramma di Gantt} tutti i task inseriti in Asana. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle funzionalità offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare Slack: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di Asana. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perché offre un ottimo servizio gratuitamente.
 \end{enumerate}
+
 \end{document}
