--- a/Interni/Verbali/VI_16-12-22.tex
+++ b/Interni/Verbali/VI_16-12-22.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 22 dicembre 2016}
 % \date{9 gennaio 2017}
 
@@ -20,11 +20,14 @@
 	\item[Orario] 11:30 - 13:30;
 	\item[Durata] 2 ore;
 	\item[Luogo incontro] 2AB45 di Torre Archimede;
-	\item[Oggetto] discussione dei casi d'uso;
-	\item[Segretario] \PB; 
+	\item[Oggetto] discussione dei \gloss{casi d'uso};
+	\item[Segretario] \PB;
 	\item[Partecipanti] \ALL.
 \end{description}
 
-Durante la riunione sono stati analizzati una parte dei casi d'uso e dei requisiti sorti dalla riunione precedente col proponente.
+Decisioni prese:
+\begin{enumerate}
+	\item \textbf{analisi dei requisiti} --- Abbiamo analizzato una parte dei casi d'uso e dei requisiti sorti dalla riunione precedente con il \GP.
+\end{enumerate}
 
 \end{document}
