--- a/Interni/Verbali/VI_17-02-01.tex
+++ b/Interni/Verbali/VI_17-02-01.tex
@@ -8,7 +8,7 @@
 \author{\LS}
 \supervisor{\LB}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione interna del 1 febbraio 2017}
 % \date{9 gennaio 2017}
 
@@ -24,10 +24,12 @@
 	\item[Segretario] \LS; 
 	\item[Partecipanti] \ALL.
 \end{description}
+
 Decisioni prese:
-\begin{itemize}
-\item utilizzare la libreria \jointjs{} per realizzare \gloss{editor} di diagrammi interattivi. Questo ha portato a utilizzare altre tecnologie correlate quali \html{}, \jquery{}, \lodash{} e \backbonejs{} che offre un'interfaccia RESTful;
-\item \gloss{design pattern} principali;
-\item \proj{} sarà una single page application.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{libreria grafica per \emph{front end}} --- Abbiamo scelto di utilizzare la libreria \jointjs{} per realizzare l'\gloss{editor} di diagrammi interattivi; la scelta è stata motivata dalla comodità di utilizzo e di esportazione dei dati di tale libreria. La scelta di questa libreria ci ha portati a utilizzare altre tecnologie correlate, quali \html{}, \jquery{}, \lodash{} e \backbonejs{} (che offre un'interfaccia RESTful).
+	\item \textbf{\emph{design pattern}} --- Abbiamo discusso di alcuni \gloss{design pattern} che ci potessero venire in aiuto nella progettazione dell'architettura.
+	\item \textbf{natura dell'applicazione} --- Abbiamo stabilito che \proj{} sarà una \emph{single page application}.
+\end{enumerate}
+
 \end{document}
