adeguati verbali esterni

--- a/Esterni/Verbali/VE_16-12-15.tex
+++ b/Esterni/Verbali/VE_16-12-15.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione esterna del 15 dicembre 2016}
 % \date{9 gennaio 2017}
 
@@ -26,9 +26,11 @@
 \end{description}
 
 Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove.
+
 Decisioni prese:
-\begin{itemize}
-\item abbiamo appurato che il dominio di programmi software che il nostro editor dovrà modellare dev'essere mirato ad un particolare ambiente applicativo; 
-\item linguaggio da usare e natura del software (\gloss{applicazione web} o desktop) liberi.
-\end{itemize}
+\begin{enumerate}
+	\item \textbf{dominio applicativo} --- Abbiamo appurato che il dominio di programmi che il nostro \gloss{editor} dovrà generare dev'essere mirato ad un particolare ambiente applicativo.
+	\item \textbf{requisiti di vincolo} --- Il \GP ci ha lasciato libertà sulla scelta del linguaggio da usare per l'implementazione e sulla natura del software (\gloss{applicazione web} o desktop, indifferentemente).
+\end{enumerate}
+
 \end{document}
