--- a/Esterni/Verbali/VE_16-12-21.tex
+++ b/Esterni/Verbali/VE_16-12-21.tex
@@ -8,7 +8,7 @@
 \author{\PB}
 \supervisor{\MM}
 \uso{interno}
-\dest{Tutti i membri del gruppo}
+\dest{\ALL}
 \title{Riunione esterna del 21 dicembre 2016}
 % \date{9 gennaio 2017}
 
@@ -25,10 +25,11 @@
 	\item[Partecipanti] \GP, \ALL.
 \end{description}
 
-Durante la riunione sono state prese le seguenti decisioni:
-\begin{itemize}
-\item chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto;
-\item sorta la necessità di dover generare anche l'interfaccia del prodotto (gioco da tavolo) generato dal software;
-\item il \gloss{diagramma delle attività} sarà ispirato al \gloss{diagramma Nassi–Shneiderman} utilizzando una rappresentazione “a blocchi”.
-\end{itemize}
+Decisioni prese:
+\begin{enumerate}
+	\item \textbf{stereotipi} --- Il \GP ci ha chiarito il concetto di stereotipo e dove poter utilizzarlo all'interno del progetto.
+	\item \textbf{generazione di GUI} --- È sorta la necessità di dover generare anche l'interfaccia grafica del programma (gioco da tavolo) generato.
+	\item \textbf{\gloss{diagramma delle attività}} ---  Abbiamo pensato che il diagramma delle attività potrebbe ispirarsi ai \gloss{diagrammi Nassi–Shneiderman}, utilizzando una rappresentazione “a blocchi”; questo permette una strutturazione più chiara del flusso di controllo di una procedura e sembra più facile da gestire (e da implementare) di un normale diagramma delle attività.
+\end{enumerate}
+
 \end{document}
