--- a/Esterni/Verbali/VE_17-01-10.tex
+++ b/Esterni/Verbali/VE_17-01-10.tex
@@ -25,6 +25,9 @@
 	\item[Partecipanti] \GP, \LB, \GG, \MM.
 \end{description}
 
-Abbiamo presentato al \GP un breve esempio (nella forma di un caso d'uso del sistema), in cui un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma delle attività}.
+Decisioni prese:
+\begin{enumerate}
+	\item Abbiamo presentato al \GP un breve esempio d'uso del sistema; in tale esempio, un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma delle attività}. L'esempio d'uso illustrato al \GP è disponibile nell'appendice A del documento \AdR.
+\end{enumerate}
 
 \end{document}
